name:                        to-do
version:                     0.1.0.0
homepage:                    https://github.com/austinclem1/to-do-haskell#readme
license:                     MIT
license-file:                LICENSE
author:                      Austin Clements
maintainer:                  austinclementsbass@gmail.com
copyright:                   2022 Austin Clements
category:                    Command Line
build-type:                  Simple
cabal-version:               >= 1.10
extra-source-files:          README.md

executable to-do-exe
  default-language:          Haskell2010
  hs-source-dirs:            app
  main-is:                   Main.hs
  ghc-options:               -Werror -fwarn-incomplete-patterns
  build-depends:             base >= 4.7 && < 5
